unpackaged/main/default/objects/EstadoDeCuenta__c/EstadoDeCuenta__c.object-meta.xml
<CustomObject>
    <label>Estado de cuenta / Post venta</label>
    <nameField>
        <label>Nombre de Estado de cuenta / Post venta</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Estados de cuenta / Post venta</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>