unpackaged/main/default/objects/EstadoDeCuenta__c/fields/Estadodepagare__c.field-meta.xml
<CustomField>
    <fullName>Estadodepagare__c</fullName>
    <label>Estado de pagaré</label>
    <type>TextArea</type>
</CustomField>