unpackaged/main/default/objects/EstadoDeCuenta__c/fields/Fechadepagare__c.field-meta.xml
<CustomField>
    <fullName>Fechadepagare__c</fullName>
    <label>Fecha de pagaré</label>
    <type>TextArea</type>
</CustomField>