unpackaged/main/default/objects/EstadoDeCuenta__c/fields/Importedepagare__c.field-meta.xml
<CustomField>
    <fullName>Importedepagare__c</fullName>
    <label>Importe de pagaré</label>
    <type>TextArea</type>
</CustomField>