unpackaged/main/default/objects/EstadoDeCuenta__c/fields/Nodecliente__c.field-meta.xml
<CustomField>
    <fullName>Nodecliente__c</fullName>
    <label>No. de cliente</label>
    <type>TextArea</type>
</CustomField>