unpackaged/main/default/objects/EstadoDeCuenta__c/fields/NoProceso__c.field-meta.xml
<CustomField>
    <fullName>NoProceso__c</fullName>
    <label>No. de proceso</label>
    <length>30</length>
    <type>Text</type>
</CustomField>