unpackaged/main/default/objects/EstadoDeCuenta__c/fields/Numerodepagare__c.field-meta.xml
<CustomField>
    <fullName>Numerodepagare__c</fullName>
    <label>Número de pagaré</label>
    <type>TextArea</type>
</CustomField>