unpackaged/main/default/objects/EstadoDeCuenta__c/fields/Proceso_ATC__c.field-meta.xml
<CustomField>
    <fullName>Proceso_ATC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proceso ATC</label>
    <referenceTo>Inventario__c</referenceTo>
    <relationshipLabel>Estados de cuenta / Post venta</relationshipLabel>
    <relationshipName>Estados_de_cuenta_Post_venta</relationshipName>
    <type>Lookup</type>
</CustomField>