unpackaged/main/default/objects/EstadoDeCuenta__c/fields/Tipodedocumento__c.field-meta.xml
<CustomField>
    <fullName>Tipodedocumento__c</fullName>
    <label>Tipo de documento</label>
    <type>TextArea</type>
</CustomField>