unpackaged/main/default/objects/EstadoDeCuenta__c/fields/Tipodepagare__c.field-meta.xml
<CustomField>
    <fullName>Tipodepagare__c</fullName>
    <label>Tipo de pagaré</label>
    <type>TextArea</type>
</CustomField>