unpackaged/main/default/objects/EstadoDeCuenta__c/fields/Vencimientodepagare__c.field-meta.xml
<CustomField>
    <fullName>Vencimientodepagare__c</fullName>
    <label>Vencimiento de pagaré</label>
    <type>TextArea</type>
</CustomField>